--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
     "axios": "^1.12.2",
+    "formik": "^2.4.6",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1"
+    "react-router": "^7.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
