--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
+    "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "formik": "^2.4.6",
     "isbot": "^5.1.27",
